<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_introduction"
            android:icon="@drawable/ic_book_black_18dp"
            android:title="@string/introduction"></item>
        <item
            android:id="@+id/group1"
            android:icon="@drawable/ic_slideshow_black_18dp"
            android:title="@string/navigation_menu_show">
            <menu>
                <item
                    android:id="@+id/clock"
                    android:icon="@drawable/ic_access_time_black_18dp"
                    android:title="@string/navigation_menu_clock" />
                <item
                    android:id="@+id/alarm_clock"
                    android:icon="@drawable/ic_timer_black_18dp"
                    android:title="@string/navigation_menu_alarm_clock" />
                <item
                    android:id="@+id/stopwatch"
                    android:icon="@drawable/ic_timelapse_black_18dp"
                    android:title="@string/navigation_menu_stopwatch" />
                <item
                    android:id="@+id/chime"
                    android:icon="@drawable/ic_alarm_multiple_black_18dp"
                    android:title="@string/navigation_menu_chime" />
                <item
                    android:id="@+id/memory_day"
                    android:icon="@drawable/ic_calendar_clock_black_18dp"
                    android:title="@string/navigation_menu_memorial_day" />
                <item
                    android:id="@+id/temperature"
                    android:icon="@drawable/ic_oil_temperature_black_18dp"
                    android:title="@string/navigation_menu_temperature" />
                <item
                    android:id="@+id/power"
                    android:icon="@drawable/ic_battery_std_black_18dp"
                    android:title="@string/navigation_menu_power" />
            </menu>
        </item>
    </group>
</menu>